added more tests on scoring and innings constraints
